--- a/templates/VP/panel_detail.html
+++ b/templates/VP/panel_detail.html
@@ -338,10 +338,10 @@
                         </span>
                         
                         {% if member.email %}
-                        <p class="small text-muted">{{ member.email }}</p>
+                        <p class="small text-white">{{ member.email }}</p>
                         {% endif %}
                         
-                        <p class="small text-muted">{{ member.panel.name }} ({{ member.panel.year }})</p>
+                        <p class="small text-white">{{ member.panel.name }} ({{ member.panel.year }})</p>
                     </div>
                     
                     <!-- Right Column - Bio & Contact -->
